# rust_splittea_bot

./: Cargo.toml  README.md
src/: bot.rs  cli.rs  controller.rs  db.rs  lib.rs  main.rs
src/entity/: expense.rs  group.rs  mod.rs  user.rs  user_group.rs
src/migration/: m20220101_000001_create_table.rs
