[package]
name = "rust_splittea_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite"] }
lazy_static = "1.4.0"
async_once = "0.2.6"
clap = { version = "4.5.4", features = ["derive", "env", "string"] }
directories = "5.0.1"
sea-orm-migration = "0.12.15"
sqlx = { version = "0.7.4", features = ["runtime-tokio"] }
anyhow = "1.0.82"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
once_cell = "1.19.0"
rust_decimal = "1.35.0"
